--- a/style.css
+++ b/style.css
@@ -4,3 +4,23 @@
 	box-sizing: border-box;
 
 }
+#navbarstyle{
+	position: sticky;
+	top: 0;
+	z-index: 9999;
+}
+.header_navbar-brand{
+	margin-left: 100px;
+	font-size: 25px;
+}
+@media (min-width:991px){
+.header_navbar-nav{
+	margin-left: 400px;
+	font-size: 20px;
+	z-index: 1;
+}
+}
+a{
+    text-decoration: none;
+    color: inherit;
+}
