--- a/style.css
+++ b/style.css
@@ -24,3 +24,172 @@ a{
     text-decoration: none;
     color: inherit;
 }
+.about{
+    margin: 60px;
+}
+
+.bestuni{
+	background-color: #f5f5f5e1;
+	min-height: 120vh;
+}
+.project{
+    padding: 5px;
+    margin: 5%;
+    width: 90%;
+    height: auto;
+    text-align: center;
+}
+
+.projects{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-flow: wrap;
+}
+
+#Project h2{
+    color:#fff
+}
+
+.earth_projects{
+    width: 400px;
+    height: 400px;
+    background: #fff;
+    position: relative;
+    border-radius: 10px;
+    background-image: url("image/TASUED_.jpg");
+    margin: 20px;
+    background-size: cover;
+    background-position: center;
+}
+.oau{
+	width: 400px;
+    height: 400px;
+    background: #fff;
+    position: relative;
+    border-radius: 10px;
+    background-image: url("image/oau.jpg");
+    margin: 20px;
+    background-size: cover;
+    background-position: center;
+}
+.unn{
+	width: 400px;
+    height: 400px;
+    background: #fff;
+    position: relative;
+    border-radius: 10px;
+    background-image: url("image/University-of-Nigeria-Nsukka-UNN.jpg");
+    margin: 20px;
+    background-size: cover;
+    background-position: center;
+}
+.text{
+    position: absolute;
+    height: 55px;
+    width: 100%;
+    left: 0;
+    bottom: 0;
+    z-index: 2;
+    background-color: white;
+    overflow: hidden;
+    transition: 0.2s;
+    padding: 13px;
+}
+
+.text:hover{
+    height: 200px;
+    transition: 0.3s;
+}
+
+.text h3{
+   padding: 5px;
+    margin: 5px; 
+    margin-top: 3px;
+}
+
+.content{
+    color: #000;
+    margin: 5px;
+    padding: 5px;
+}
+.button{
+    border: 5px solid lightblue;
+    border-radius: 10px;
+    width: 160px;
+    margin: 3px;
+    margin-bottom: 100px;
+    margin-left: 10px;
+    
+}
+
+.lead{
+    font-family: 'Times New Roman', Times, serif;
+    font-style: italic;
+}
+.shapedividers_com-3547{
+    overflow:hidden;
+    position:relative;
+    }
+    .shapedividers_com-3547::before{
+    content:'';
+    font-family:'shape divider from ShapeDividers.com';
+    position: absolute;
+    bottom: -1px;
+    left: -1px;
+    right: -1px;
+    top: -1px;
+    z-index: 3;
+    pointer-events: none;
+    background-repeat: no-repeat; 
+    background-size: 100% 90px;
+    background-position: 50% 0%;    
+    background-image: url('data:image/svg+xml;charset=utf8, <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 35.28 2.17" preserveAspectRatio="none"><path d="M0 .5c3.07.55 9.27-.42 16.14 0 6.88.4 13.75.57 19.14-.11V0H0z" fill="%23fbd8c2"/><path d="M0 1c3.17.8 7.29-.38 10.04-.55 2.75-.17 9.25 1.47 12.67 1.3 3.43-.17 4.65-.84 7.05-.87 2.4-.02 5.52.88 5.52.88V0H0z" opacity=".5" fill="%23fbd8c2"/><path d="M0 1.85c2.56-.83 7.68-.3 11.79-.42 4.1-.12 6.86-.61 9.58-.28 2.73.33 5.61 1.17 8.61 1 3-.19 4.73-.82 5.3-.84V.1H0z" opacity=".5" fill="%23fbd8c2"/></svg>'); 
+    }
+    
+    @media (min-width:768px){
+    .shapedividers_com-3547::before{
+    background-size: 100% 90px;
+    background-position: 50% 0%;   
+    }  
+    }
+     
+    @media (min-width:1025px){
+    .shapedividers_com-3547::before{ 
+    bottom: -0.1vw;
+    left: -0.1vw;
+    right: -0.1vw;
+    top: -0.1vw; 
+    background-size: 100% 97px;
+    background-position: 50% 100%;  
+    background-image: url('data:image/svg+xml;charset=utf8, <svg preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 -30 1000 130"><g fill="%23dbd7d9"><path d="M1001 20c-7-7-24-9-39-9s-30 4-44 7-29 5-44 4c-19-1-35-8-54-11-26-4-56 0-79 8s-43 17-65 26-47 16-75 16c-28 1-56-6-85-4a141 141 0 00-42 11c-12-5-24-9-39-11-25-2-50 5-76 4-25 0-48-8-67-16s-37-19-58-26-48-12-71-8c-17 3-31 10-49 11-13 1-27-1-39-4s-26-6-39-7-29 2-36 9v83h1001z"/><path d="M1001 11c-7-7-24-10-39-9s-30 4-44 7-29 5-44 4c-19-2-35-9-54-11-26-5-56 0-79 7s-43 18-65 26-47 17-75 17-56-6-85-4a141 141 0 00-42 11c-12-6-24-10-39-11-25-2-50 4-76 4-25 0-48-8-67-17s-37-18-58-26-48-12-71-7c-17 2-31 9-49 11-13 1-27-2-39-4S49 3 36 2 7 4 0 11v83l366-1h204l431 1z" opacity=".5"/></g></svg>'); 
+    }
+    }
+    @media (min-width:2100px){
+    .shapedividers_com-3547::before{
+    background-size: 100% calc(2vw + 97px);
+    }
+    }
+
+    .testimonial{
+        min-height: 30vh;
+        margin: 50px;
+       
+       
+    }
+    @media (max-width:768px){
+        .testimonial{
+            min-height: 60vh;
+        }
+    }
+
+    footer{
+       /*  min-height: 70vh; */
+        background-color: #F8F9FA;
+    }
+    
+    .footer-inf0{
+        margin: 15px;
+        padding: 15px;
+    }
+
