added image folder

--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ a{
     background: #fff;
     position: relative;
     border-radius: 10px;
-    background-image: url("image/TASUED_.jpg");
+    background-image: url("images/TASUED_.jpg");
     margin: 20px;
     background-size: cover;
     background-position: center;
@@ -68,7 +68,7 @@ a{
     background: #fff;
     position: relative;
     border-radius: 10px;
-    background-image: url("image/oau.jpg");
+    background-image: url("images/oau.jpg");
     margin: 20px;
     background-size: cover;
     background-position: center;
@@ -79,7 +79,7 @@ a{
     background: #fff;
     position: relative;
     border-radius: 10px;
-    background-image: url("image/University-of-Nigeria-Nsukka-UNN.jpg");
+    background-image: url("images/University-of-Nigeria-Nsukka-UNN.jpg");
     margin: 20px;
     background-size: cover;
     background-position: center;
